--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,17 +29,26 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
+  flutter_secure_storage: ^9.2.4
   flutter_slidable: ^4.0.0
   flutter_svg: ^2.2.0
   image_picker: ^1.1.2
   intl: ^0.20.2
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
+  build_runner: ^2.5.4
+  custom_lint: ^0.7.5
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
