--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_tokonih
-description: "A new Flutter project."
+name: "flutter_tokonih"
+description: "Flutter TokoNih"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.20.2
   riverpod_annotation: ^2.6.1
+  skeletonizer: ^1.4.3
 
 dev_dependencies:
   build_runner: ^2.5.4
