--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   flutter_slidable: ^4.0.0
   flutter_svg: ^2.2.0
+  go_router: ^16.0.0
   image_picker: ^1.1.2
   intl: ^0.20.2
   riverpod_annotation: ^2.6.1
